# NLP_Linkedin_offers

./: .gitattributes  .gitignore  README  README.md  pyproject.toml
app/backend/src/: lstm.py
data/: dowload_save.py  preprocess_postings.ipynb  process_data_modeling.py
frontend/: components.d.ts  index.html  package-lock.json
frontend/src/components/: MainContentComponent.vue  SidebarComponent.vue
frontend/src/pages/: index.vue
frontend/src/plugins/: vuetify.js
frontend/src/styles/: settings.scss
models/src/evaluation/: custom_evaluate.py  evaluate.ipynb  evaluate.py  metrics.py
models/src/generation/: LSTM.ipynb  dataset_analysis.ipynb  lstm.py  neural_network.ipynb  neural_networks.py  ngram.ipynb  recurent_neural_network.ipynb  recurent_neural_network.py  token_embeddings.pkl  transoformers.ipynb
models/src/generation/data/processed/: cleaned_postings_modeling.parquet  vocab.json
models/src/generation/model_cache/: hybrid_ffnn_model.pth  network_deep_lr.pth
models/src/preprocessing/: normalizer.py  preprocessing.py  tokenizer.py
models/src/regression/: classification.ipynb  data_transformation.py  linear_regression.py  neural_networks.py  preprocess_useful_datasets.ipynb  research.ipynb  researchNotes.md  research_notes.md  transformer.ipynb
models/src/utils/: lstm_utils.py
models/test/: test_normalizer.py  test_tokenizer.py
