[project]
name = "nlp-linkedin-offers"
version = "0.1.0"
description = "Linkedin NLP tasks"
authors = [
    {name = "Gabriel",email = "gabriel.calvente@epita.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "ruff (>=0.11.0,<0.12.0)",
    "pyright (>=1.1.396,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
